[package]
name = "events"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faraway"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = "4.1.4"
ethers = { version = "1.0.2", features = ["abigen", "rustls", "ws", "legacy"] }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.25.0", features = ["full"]}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
log = "0.4.17"
# web3 = "0.18.0"
